--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -21,7 +21,7 @@
   <div class="bg-gray-400">
     <%= turbo_frame_tag 'entry_modal' %>
     <div id="calendar">
-      <%= render 'calendar', calendar: @calendar %>
+      <%= render 'calendar_show', calendar: @calendar %>
     </div>
   </div>
 
