--- a/app/views/calendars/_calendar_show.html.erb
+++ b/app/views/calendars/_calendar_show.html.erb
@@ -3,19 +3,16 @@
   <div class="relative w-full h-full">
     <div class="absolute top-1 left-1 text-xs md:text-sm text-gray-500 text-center">
       <%= date.day %>
-      <div class="<%= class_names(
-                        'sm:hidden',
-                        hidden: index_action?
-                      ) %>">
+      <div class="sm:hidden">
         <%= t('date.abbr_day_names')[date.wday] %>
       </div>
     </div>
 
-    <% if !index_action? && (entry = entries.find { |e| e.user == current_user }) %>
+    <% if entry = entries.find { |e| e.user == current_user } %>
       <%= link_to '編集', edit_entry_path(entry),
                   class: 'absolute text-blue-500 top-1 right-1 text-xs',
                   data: { turbo_frame: 'entry_modal' } %>
-    <% elsif !index_action? && signed_in? && entries.size < calendar.max_entries %>
+    <% elsif signed_in? && entries.size < calendar.max_entries %>
       <%= link_to '+', new_calendar_entry_path(calendar, registration_date: date),
                   class: class_names(
                     'absolute text-blue-500', {
@@ -28,18 +25,6 @@
 
     <div class="w-full h-full flex justify-evenly sm:flex-col items-center p-1">
       <% entries.sort_by(&:created_at).each do |entry| %>
-        <% if controller.action_name == "index" %>
-          <div class="h-full flex flex-col justify-center mt-4">
-            <%= image_tag(entry.user.avatar_url,
-                          class: class_names(
-                            'rounded-full w-8 h-8 object-cover',
-                            'sm:w-12 sm:h-12' => entries.size == 1,
-                            'sm:w-12 sm:h-12 lg:w-15 lg:h-15' => entries.size == 2,
-                            'md:w-8 md:h-8 lg:w-10 lg:h-10' => entries.size >= 3
-                          ),
-                          alt: 'プロフィール画像') %>
-          </div>
-        <% else %>
           <div class="flex flex-col justify-evenly items-center mt-4">
             <%= link_to entry.url do %>
               <%= image_tag(entry.user.avatar_url,
@@ -55,7 +40,6 @@
               <%= entry.user.name if entries.size < 3 %>
             </div>
           </div>
-        <% end %>
       <% end %>
     </div>
   </div>
