--- a/app/views/entries/create.turbo_stream.erb
+++ b/app/views/entries/create.turbo_stream.erb
@@ -4,7 +4,7 @@
 
 <%= turbo_stream.update "flash-message", partial: 'shared/flash' %>
 
-<%= turbo_stream.update 'calendar', partial: "calendars/calendar", locals: { calendar: entry.calendar } %>
+<%= turbo_stream.update 'calendar', partial: "calendars/calendar_show", locals: { calendar: entry.calendar } %>
 
 <% if entry.previous_entry %>
   <%= turbo_stream.after "entry_#{entry.previous_entry.id}", entry  %>
