カレンダー詳細ページをデザイン

--- a/app/views/calendars/_calendar_index.html.erb
+++ b/app/views/calendars/_calendar_index.html.erb
@@ -1,18 +1,20 @@
-<%= month_calendar(start_date: calendar.start_date, events: calendar.entries.includes(:user),
-                   attribute: :registration_date) do |date, entries| %>
-  <div class="relative w-full">
-    <div class="absolute top-1 left-1 text-[11px] sm:text-base text-black">
-      <%= date.day %>
-    </div>
+<div class="grid grid-cols-7 bg-light-ochre rounded-lg shadow-xl">
+  <% (1..25).each do |day| %>
+    <div data-test="day-<%= day %>"
+         class="border-b border-r border-ochre p-1 aspect-[3/4]">
+      <div class="relative h-full">
+        <div class="absolute top-1 left-1 text-xs sm:text-base text-ochre">
+          <%= day %>
+        </div>
 
-    <% if entries.present? %>
-      <div class="h-full w-fit mx-auto sm:py-3">
-        <div class="h-full flex flex-col justify-end">
-            <%= image_tag(entries.min_by(&:created_at).user.avatar_url,
+        <% if entry = entries.find { |e| e.registration_date.day == day } %>
+          <div class="h-full flex flex-col justify-end items-center sm:py-2">
+            <%= image_tag(entry.user.avatar_url,
                           class: 'rounded-full w-7 h-7 sm:w-12 sm:h-12 object-cover',
                           alt: 'プロフィール画像') %>
-        </div>
+          </div>
+        <% end %>
       </div>
-    <% end %>
-  </div>
-<% end %>
+    </div>
+  <% end %>
+</div>
