--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -2,12 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-/*
-
 @layer components {
-  .btn-primary {
-    @apply py-2 px-4 bg-blue-200;
+  .container-wrapper {
+    @apply mx-auto max-w-3xl px-2;
+  }
+
+  .hover-border-white {
+    @apply border-2 border-transparent hover:border-white;
   }
 }
-
-*/
