--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -2,21 +2,19 @@
 
 <section class="py-10 mb-8 px-2">
   <h1 class="mb-4">
-    <%= image_tag 'logo.png', alt: 'ロゴ', class: 'h-[300px] md:h-[400px] w-auto mx-auto' %>
+    <%= image_tag 'logo.png', alt: 'ロゴ', class: 'h-[300px] md:h-[400px] mx-auto' %>
   </h1>
   <p class="drop-shadow-md text-lg font-bold text-center tracking-wider">Fjord Bootcampのアドベントカレンダー</p>
 </section>
 
-<div class="max-w-3xl mx-auto px-3">
+<div class="container-wrapper">
   <% @calendars.each do |calendar| %>
     <article class="mb-10">
       <%= link_to calendar_path(calendar),
                   data: { test: 'calendar', year: calendar.year },
-                  class: 'bg-[#B3DC7C] block border-2 p-6 rounded-2xl shadow-xl  space-y-4 hover:bg-white/10' do %>
+                  class: 'bg-ochre block p-6 rounded-xl shadow-xl space-y-4 hover-border-white' do %>
         <h2 class="drop-shadow-md text-lg font-bold text-center"><%= calendar.title %></h2>
-        <div class="mx-auto max-w-2xl w-full">
-          <%= render 'calendar_index', calendar: calendar %>
-        </div>
+        <%= render 'calendar_index', entries: calendar.entries %>
       <% end %>
     </article>
   <% end %>
