--- a/app/views/simple_calendar/_month_calendar.html.erb
+++ b/app/views/simple_calendar/_month_calendar.html.erb
@@ -1,33 +1,24 @@
-<div class="bg-gray-100 my-2">
-  <div class="<%= class_names(
-                    'bg-white grid',
-                    { 'grid-cols-7' => index_action?,
-                      'grid-cols-1 sm:grid-cols-7' => !index_action? }
-                  ) %>">
+<div class="grid grid-cols-1 sm:grid-cols-7 bg-light-ochre rounded-lg shadow-xl">
+  <% date_range.first(7).each_with_index do |day, i| %>
+    <div class="<%= class_names(
+                      'hidden sm:block py-3 text-center font-bold bg-ochre shadow-lg',
+                      { 'rounded-tl-lg' => i.zero?, 'rounded-tr-lg' => i == 6 }
+                    ) %>">
+      <%= day.strftime('%a') %>
+    </div>
+  <% end %>
 
-    <% unless index_action? %>
-      <% date_range.first(7).each do |day| %>
-        <div class="py-2 text-center font-semibold
-                  text-gray-600 border-b bg-gray-300 max-sm:hidden">
-          <%= t('date.abbr_day_names')[day.wday] %>
-        </div>
-      <% end %>
+  <% start_weekday(start_date.year).times do %>
+    <div
+      class="hidden sm:block aspect-[3/4] border-b border-r border-ochre p-2"
+      data-test="offset_cell">
+    </div>
+  <% end %>
 
-      <% start_weekday(start_date.year).times do %>
-        <div data-test="offset_cell" class="aspect-[3/4] p-2 border border-gray-300 bg-gray-100 max-sm:hidden"></div>
-      <% end %>
-    <% end %>
-
-    <% advent_dates(start_date.year).each do |date| %>
-      <div data-test="day-<%= date.day %>"
-           class="<%= class_names(
-                        'p-1 border border-gray-300 flex justify-between',
-                        { 'aspect-[3/4]' => index_action?,
-                          'aspect-[4/1] sm:aspect-[3/4]' => !index_action?,
-                          'bg-yellow-100' => date == Time.zone.today }
-                      ) %>">
-        <% instance_exec(date, calendar.sorted_events_for(date), &passed_block) %>
-      </div>
-    <% end %>
-  </div>
+  <% advent_dates(start_date.year).each do |date| %>
+    <div data-test="day-<%= date.day %>"
+         class="border-b border-r border-ochre p-2 aspect-[4/1] sm:aspect-[3/4]">
+      <% instance_exec(date, calendar.sorted_events_for(date), &passed_block) %>
+    </div>
+  <% end %>
 </div>
