--- a/app/views/calendars/_calendar_show.html.erb
+++ b/app/views/calendars/_calendar_show.html.erb
@@ -1,46 +1,64 @@
 <%= month_calendar(start_date: calendar.start_date, events: calendar.entries.includes(:user),
                    attribute: :registration_date) do |date, entries| %>
   <div class="relative w-full h-full">
-    <div class="absolute top-1 left-1 text-xs md:text-sm text-gray-500 text-center">
+    <div class="absolute top-1 left-1 text-xl sm:text-base text-ochre">
       <%= date.day %>
-      <div class="sm:hidden">
-        <%= t('date.abbr_day_names')[date.wday] %>
+      <div class="sm:hidden text-base">
+        <%= date.strftime('%a') %>
       </div>
     </div>
 
-    <% if entry = entries.find { |e| e.user == current_user } %>
-      <%= link_to '編集', edit_entry_path(entry),
-                  class: 'absolute text-blue-500 top-1 right-1 text-xs',
-                  data: { turbo_frame: 'entry_modal' } %>
-    <% elsif signed_in? && entries.size < calendar.max_entries %>
-      <%= link_to '+', new_calendar_entry_path(calendar, registration_date: date),
-                  class: class_names(
-                    'absolute text-blue-500', {
-                      'top-1 right-1 text-base' => calendar.entry_on?(date),
-                      'top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-2xl' => !calendar.entry_on?(date)
-                    }
-                  ),
-                  data: { turbo_frame: 'entry_modal', test: date.to_s } %>
+  <% if entry = entries.find { |e| e.user == current_user } %>
+    <%= link_to edit_entry_path(entry),
+                class: 'absolute right-1',
+                title: '編集',
+                data: { turbo_frame: 'entry_modal' } do %>
+                <i class="fa-solid fa-pen-to-square text-ochre py-2 text-2xl sm:text-lg hover:scale-125"></i>
     <% end %>
 
-    <div class="w-full h-full flex justify-evenly sm:flex-col items-center p-1">
-      <% entries.sort_by(&:created_at).each do |entry| %>
-          <div class="flex flex-col justify-evenly items-center mt-4">
-            <%= link_to entry.url do %>
-              <%= image_tag(entry.user.avatar_url,
-                            class: class_names(
-                              'rounded-full w-10 h-10 object-cover',
-                              'lg:w-15 lg:h-15' => entries.size < 3,
-                              'md:w-8 md:h-8 lg:w-10 lg:h-10' => entries.size >= 3,
-                              'pointer-events-none opacity-50' => entry.url.blank?
-                            ),
-                            alt: 'プロフィール画像') %>
-            <% end %>
-            <div class="text-xs text-center">
-              <%= entry.user.name if entries.size < 3 %>
-            </div>
-          </div>
+  <% elsif signed_in? && entries.size < calendar.max_entries %>
+    <%= link_to new_calendar_entry_path(calendar, registration_date: date),
+                class: class_names(
+                  'absolute', {
+                    'text-2xl sm:text-lg right-1' => calendar.entry_on?(date),
+                    'text-3xl top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2' => !calendar.entry_on?(date)
+                  }
+                ),
+                title: '新規作成',
+                data: { turbo_frame: 'entry_modal', test: date.to_s } do %>
+      <i class="fa-solid fa-plus text-ochre py-2 hover:scale-125"></i>
+    <% end %>
+  <% end %>
+
+<div class="h-full flex justify-evenly sm:justify-end sm:flex-col items-center p-1">
+  <% entries.sort_by(&:created_at).each do |entry| %>
+    <div class="relative group mt-2">
+      <%= link_to entry.url do %>
+        <%= image_tag(entry.user.avatar_url,
+                      class: class_names(
+                        'rounded-full object-cover mx-auto',
+                        'w-12 h-12' => entries.size == 1,
+                        'w-10 h-10' => entries.size == 2,
+                        'w-8 h-8' => entries.size >= 3
+                      ),
+                      alt: 'プロフィール画像') %>
       <% end %>
+
+      <div class="<%= class_names(
+                        'text-xs mt-1 px-2 py-1',
+                        {
+                          'text-ochre text-center' => entries.size == 1,
+                          'pointer-events-none
+                           absolute top-full left-1/2 -translate-x-1/2
+                           opacity-0 group-hover:opacity-100
+                           bg-ochre/80 rounded-md whitespace-nowrap
+                           group-hover:z-10' => entries.size > 1
+                        }
+                      ) %>">
+        <%= entry.user.name %>
+      </div>
     </div>
+  <% end %>
+</div>
   </div>
 <% end %>
