エントリーフォームをデザイン

--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -4,7 +4,7 @@
   <div class="space-y-8" data-controller="entry-modal copy-entries">
 
 <div class="rounded-xl shadow-xl bg-ochre p-4 md:p-6">
-  <section class="rounded-xl bg-[#C88A41] px-8 py-6">
+  <section class="rounded-xl bg-dark-ochre px-8 py-6">
     <h1 class="text-xl sm:text-2xl font-extrabold tracking-wide drop-shadow-md">
       <%= @calendar.title %>
     </h1>
