--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -10,4 +10,8 @@
   .hover-border-white {
     @apply border-2 border-transparent hover:border-white;
   }
+
+  .box-style {
+    @apply px-4 py-2 rounded-md shadow-md border border-ochre;
+  }
 }
