--- a/app/views/calendars/_calendar_show.html.erb
+++ b/app/views/calendars/_calendar_show.html.erb
@@ -1,7 +1,7 @@
 <%= month_calendar(start_date: calendar.start_date, events: calendar.entries.includes(:user),
                    attribute: :registration_date) do |date, entries| %>
   <div class="relative w-full h-full">
-    <div class="absolute top-1 left-1 text-xl sm:text-base text-ochre">
+    <div class="absolute top-1 left-1 text-xl sm:text-base text-dark-ochre">
       <%= date.day %>
       <div class="sm:hidden text-base">
         <%= date.strftime('%a') %>
@@ -13,7 +13,7 @@
                 class: 'absolute right-1',
                 title: '編集',
                 data: { turbo_frame: 'entry_modal' } do %>
-                <i class="fa-solid fa-pen-to-square text-ochre py-2 text-2xl sm:text-lg hover:scale-125"></i>
+                <i class="fa-solid fa-pen-to-square text-dark-ochre py-2 text-2xl sm:text-lg hover:scale-125"></i>
     <% end %>
 
   <% elsif signed_in? && entries.size < calendar.max_entries %>
@@ -26,7 +26,7 @@
                 ),
                 title: '新規作成',
                 data: { turbo_frame: 'entry_modal', test: date.to_s } do %>
-      <i class="fa-solid fa-plus text-ochre py-2 hover:scale-125"></i>
+      <i class="fa-solid fa-plus text-dark-ochre py-2 hover:scale-125"></i>
     <% end %>
   <% end %>
 
@@ -47,7 +47,7 @@
       <div class="<%= class_names(
                         'text-xs mt-1 px-2 py-1',
                         {
-                          'text-ochre text-center' => entries.size == 1,
+                          'text-dark-ochre text-center' => entries.size == 1,
                           'pointer-events-none
                            absolute top-full left-1/2 -translate-x-1/2
                            opacity-0 group-hover:opacity-100
