--- a/app/views/calendars/edit.html.erb
+++ b/app/views/calendars/edit.html.erb
@@ -1,9 +1,13 @@
 <% title 'カレンダーの編集' %>
 
-<div class="px-5 bg-gray-200">
-  <div class="bg-gray-400 p-2 mb-4">
-    <h1 class="text-3xl font-bold">カレンダーを編集</h1>
-  </div>
+<div class="container-wrapper">
+  <div class="bg-light-ochre rounded-2xl shadow-xl overflow-hidden">
+    <div class="bg-dark-ochre px-6 py-6 rounded-t-2xl">
+      <h1 class="text-2xl font-extrabold tracking-wide">
+        カレンダーを編集
+      </h1>
+    </div>
 
-  <%= render 'form', calendar: @calendar %>
+    <%= render 'form', calendar: @calendar %>
+  </div>
 </div>
