--- a/app/views/entries/_entry.html.erb
+++ b/app/views/entries/_entry.html.erb
@@ -15,6 +15,7 @@
     <% end %>
 
     <h3 data-copy-entries-target="title" class="mb-2 font-semibold text-dark-ochre sm:text-lg tracking-wide">
+      <i class="fas fa-bullhorn text-dark-ochre"></i>
       <%= entry.title %>
     </h3>
 
