--- a/app/views/calendars/_calendar_show.html.erb
+++ b/app/views/calendars/_calendar_show.html.erb
@@ -36,7 +36,7 @@
       <%= link_to entry.url do %>
         <%= image_tag(entry.user.avatar_url,
                       class: class_names(
-                        'rounded-full object-cover mx-auto',
+                        'rounded-full object-cover mx-auto hover-pop',
                         'w-12 h-12' => entries.size == 1,
                         'w-10 h-10' => entries.size == 2,
                         'w-8 h-8' => entries.size >= 3
