--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,9 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag 'tailwind', 'inter-font', 'data-turbo-track': 'reload' %>
+    <link rel="icon" href="/assets/images/favicon.ico">
+    <link rel="apple-touch-icon" href="/assets/images/apple-touch-icon.png" sizes="180x180">
+    <link rel="icon" type="image/png" href="/assets/images/android-touch-icon.png" sizes="192x192">
     <%= javascript_importmap_tags %>
     <script src="https://kit.fontawesome.com/6ec9e18fac.js" crossorigin="anonymous"></script>
   </head>
