--- a/app/views/calendars/new.html.erb
+++ b/app/views/calendars/new.html.erb
@@ -1,13 +1,5 @@
 <% title 'カレンダーの新規作成' %>
 
-<div class="container-wrapper">
-  <div class="bg-light-ochre rounded-2xl shadow-xl overflow-hidden">
-    <div class="bg-dark-ochre px-6 py-6 rounded-t-2xl">
-      <h1 class="text-2xl font-extrabold tracking-wide">
-        カレンダーの新規作成
-      </h1>
-    </div>
-
-    <%= render 'form', calendar: @calendar %>
-  </div>
-</div>
+<%= render 'shared/content_card', title: 'カレンダーの新規作成' do %>
+  <%= render 'form', calendar: @calendar %>
+<% end %>
