--- a/app/views/entries/_entry.html.erb
+++ b/app/views/entries/_entry.html.erb
@@ -8,7 +8,7 @@
   <div class="pl-20">
     <%= link_to user_path(entry.user), data: { turbo: false },
                                        class: 'w-max flex items-center gap-2 mb-8 hover:scale-105 transition' do %>
-      <%= image_tag entry.user.avatar_url, class: 'w-8 h-8 rounded-full' %>
+      <%= image_tag entry.user.avatar_url, class: 'w-8 h-8 rounded-full', alt: 'ユーザーアイコン' %>
       <span data-copy-entries-target="name" class="text-sm font-bold text-dark-ochre">
         <%= entry.user.name %>
       </span>
