--- a/app/views/calendars/edit.html.erb
+++ b/app/views/calendars/edit.html.erb
@@ -1,4 +1,5 @@
 <% title 'カレンダーの編集' %>
+<% set_meta_tags description: '作成済みのカレンダーのタイトルや説明文を編集できます。' %>
 
 <%= render 'shared/content_card', title: 'カレンダーの編集' do %>
   <%= render 'form', calendar: @calendar %>
