--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -1,4 +1,5 @@
 <% title 'トップページ' %>
+<% set_meta_tags description: 'Fjord Bootcampのアドベントカレンダーを一覧で表示しています。' %>
 
 <div class="container-wrapper">
   <section class="py-10 mb-8 px-2">
