--- a/app/views/calendars/new.html.erb
+++ b/app/views/calendars/new.html.erb
@@ -1,4 +1,5 @@
 <% title 'カレンダーの新規作成' %>
+<% set_meta_tags description: '新しいカレンダーを作成できます。タイトルや説明を入力して登録してください。' %>
 
 <%= render 'shared/content_card', title: 'カレンダーの新規作成' do %>
   <%= render 'form', calendar: @calendar %>
