--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
 <% title "#{@user.name}のマイページ" %>
+<% set_meta_tags description: "#{@user.name}さんが登録した記事の一覧ページです。" %>
 
 <div class="container-wrapper py-10">
   <div class="bg-light-ochre rounded-2xl shadow-xl overflow-hidden min-h-screen">
