--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -1,4 +1,5 @@
 <% title @calendar.title.to_s %>
+<% set_meta_tags description: "#{@calendar.title}の説明と登録された記事一覧を表示します。" %>
 
 <div class="container-wrapper py-8">
   <div class="space-y-8" data-controller="entry-modal copy-entries">
