--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -1,4 +1,5 @@
 <% title 'プライバシーポリシー' %>
+<% set_meta_tags description: 'Fjord Calendarのプライバシーポリシーです。' %>
 
 <%= render 'shared/content_card', title: 'プライバシーポリシー' do %>
   <div class="p-6 text-gray-700 space-y-6 leading-relaxed">
