--- a/app/views/pages/terms.html.erb
+++ b/app/views/pages/terms.html.erb
@@ -1,4 +1,5 @@
 <% title '利用規約' %>
+<% set_meta_tags description: 'Fjord Calendarの利用規約です。' %>
 
 <%= render 'shared/content_card', title: 'プライバシーポリシー' do %>
   <div class="p-6 text-gray-700 space-y-6 leading-relaxed">
