--- a/app/views/simple_calendar/_month_calendar.html.erb
+++ b/app/views/simple_calendar/_month_calendar.html.erb
@@ -1,4 +1,4 @@
-<div class="grid grid-cols-1 sm:grid-cols-7 bg-light-ochre rounded-lg shadow-xl">
+<div class="gap-px grid grid-cols-1 sm:grid-cols-7 bg-light-ochre rounded-lg shadow-xl ap-px">
   <% date_range.first(7).each_with_index do |day, i| %>
     <div class="<%= class_names(
                       'hidden sm:block py-3 text-center font-bold bg-ochre shadow-lg',
