--- a/app/views/entries/_link_preview.html.erb
+++ b/app/views/entries/_link_preview.html.erb
@@ -1,17 +1,19 @@
-<%= link_to entry.url,
-            class: 'block rounded-lg shadow-sm hover:shadow-lg flex items-center p-3',
-            data: { copy_entries_target: 'url' } do %>
+<div class="bg-white rounded-lg shadow-sm hover:scale-105 transition hover:drop-shadow-xl">
+  <%= link_to entry.url,
+              class: 'block rounded-lg shadow-sm hover:shadow-lg flex items-center p-3',
+              data: { copy_entries_target: 'url' } do %>
 
-  <div class="flex-1">
-    <div class="font-semibold text-gray-900 text-sm sm:text-base">
-      <%= truncate(entry.meta_title, length: 40) %>
+    <div class="flex-1">
+      <div class="font-semibold text-gray-900 text-sm sm:text-base">
+        <%= truncate(entry.meta_title, length: 40) %>
+      </div>
+      <p class="hidden sm:block text-gray-500 text-sm mt-1">
+        <%= truncate(entry.meta_description, length: 60) %>
+      </p>
     </div>
-    <p class="hidden sm:block text-gray-500 text-sm mt-1">
-      <%= truncate(entry.meta_description, length: 60) %>
-    </p>
-  </div>
 
-  <% if entry.meta_image_url %>
-    <%= image_tag entry.meta_image_url, class: 'w-28 h-15 sm:w-40 sm:h-21 object-cover rounded-md', alt: 'アイキャッチ画像' %>
+    <% if entry.meta_image_url %>
+      <%= image_tag entry.meta_image_url, class: 'w-28 h-15 sm:w-40 sm:h-21 object-cover rounded-md', alt: 'アイキャッチ画像' %>
+    <% end %>
   <% end %>
-<% end %>
+</div>
