カラーテーマの統一とスタイル共通化のためのTailwindコンポーネント整理

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -18,4 +18,12 @@
   .hover-pop {
     @apply transition hover:scale-125;
   }
+
+  .calendar-border {
+    @apply border-b border-r border-ochre;
+  }
+
+  .hover-ochre-invert {
+    @apply cursor-pointer hover:bg-light-ochre hover:text-dark-ochre;
+  }
 }
