--- a/app/views/calendars/_form.html.erb
+++ b/app/views/calendars/_form.html.erb
@@ -3,31 +3,31 @@
     <%= render 'shared/error_messages', object: calendar %>
   <% end %>
 
-  <div class="space-y-10 p-6">
+  <div class="space-y-10 p-6 text-dark-ochre">
     <div>
-      <%= form.label :title, class: 'block mb-3 text-lg font-bold tracking-wide text-dark-ochre' %>
+      <%= form.label :title, class: 'block mb-3 text-lg font-bold tracking-wide' %>
       <%= form.text_field :title,
                           class: 'box-style bg-white text-gray-800 w-full h-10' %>
     </div>
 
     <div>
-      <%= form.label :description, class: 'block mb-3 text-lg font-bold tracking-wide block mb-2 text-dark-ochre' %>
+      <%= form.label :description, class: 'block mb-3 text-lg font-bold tracking-wide block mb-2' %>
       <%= form.text_area :description, class: 'min-h-96 box-style bg-white text-gray-800 w-full' %>
     </div>
 
     <div class="flex justify-between">
       <div class="flex gap-2">
-        <%= link_to 'キャンセル', calendar, class: 'box-style hover:bg-dark-ochre text-dark-ochre hover:text-white' %>
+        <%= link_to 'キャンセル', calendar, class: 'box-style hover:bg-dark-ochre hover:text-white' %>
 
         <% if calendar.persisted? %>
           <%= link_to '削除', calendar,
                       data: { turbo_method: :delete, turbo_confirm: 'カレンダーを削除しますか？' },
-                      class: 'box-style hover:bg-dark-ochre text-dark-ochre hover:text-white' %>
+                      class: 'box-style hover:bg-dark-ochre hover:text-white' %>
         <% end %>
       </div>
 
       <%= form.submit '保存',
-                      class: 'box-style cursor-pointer bg-dark-ochre hover:bg-light-ochre hover:text-dark-ochre' %>
+                      class: 'text-white box-style bg-dark-ochre hover-ochre-invert' %>
     </div>
   </div>
 <% end %>
