--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     <script src="https://kit.fontawesome.com/6ec9e18fac.js" crossorigin="anonymous"></script>
   </head>
 
-  <body class="font-notosans min-h-screen flex flex-col bg-[url('background.jpg')] text-white">
+  <body class="font-notosans min-h-screen flex flex-col bg-[url('background.jpg')] text-dark-ochre">
     <%= render 'shared/header' %>
 
     <div id="flash-message" data-turbo-temporary>
