--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="py-4">
+<footer class="text-white py-4">
   <div class="container-wrapper flex flex-col items-center gap-2 text-xs">
     <ul class="flex justify-evenly w-full">
       <li class="mt-auto text-center rounded-md hover:bg-white/10 px-2 py-1">
@@ -14,6 +14,6 @@
       </li>
     </ul>
 
-    <small>&copy; <%= Time.current.year %> hagiya</small>
+    <span>&copy; <%= Time.current.year %> hagiya</span>
   </div>
 </footer>
