--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -1,11 +1,11 @@
 <% title @calendar.title.to_s %>
 <% set_meta_tags description: "#{@calendar.title}の説明と登録された記事一覧を表示します。" %>
 
-<div class="container-wrapper py-8">
+<div class="container-wrapper py-8 rounded-xl">
   <div class="space-y-8" data-controller="entry-modal copy-entries">
     <div class="rounded-xl shadow-xl bg-ochre p-4 md:p-6">
       <section class="rounded-xl bg-dark-ochre px-8 py-6">
-        <h1 class="text-xl sm:text-2xl font-extrabold tracking-wide drop-shadow-md">
+        <h1 class="text-white text-xl sm:text-2xl font-extrabold tracking-wide drop-shadow-md">
           <%= @calendar.title %>
         </h1>
       </section>
@@ -14,16 +14,16 @@
         <% if current_user&.admin? %>
           <div class="flex gap-4 absolute top-4 right-4">
             <%= link_to edit_calendar_path(@calendar),
-                        class: 'text-dark-ochre hover-pop p-1',
+                        class: 'hover-pop p-1',
                         title: '編集' do %>
-              <i class="fa-solid fa-pen-to-square text-2xl"></i>
+              <i class="fa-solid fa-pen-to-square text-2xl text-dark-ochre"></i>
             <% end %>
 
             <%= button_to '#',
-                          class: 'text-dark-ochre hover-pop p-1',
+                          class: 'hover-pop p-1',
                           title: '記事のリンクをコピー',
                           data: { action: 'copy-entries#copy' } do %>
-              <i class="fa-solid fa-copy text-2xl"></i>
+              <i class="fa-solid fa-copy text-2xl text-dark-ochre"></i>
             <% end %>
           </div>
         <% end %>
