--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,4 @@
-<header class="h-16 w-full z-40 container-wrapper">
+<header class="text-white h-16 w-full z-40 container-wrapper">
   <div class="h-full flex items-center justify-between">
     <%= link_to root_path, class: 'flex items-center p-1 text-lg rounded-lg font-semibold hover:bg-white/10' do %>
       <span>Fjord Calendar</span>
@@ -14,7 +14,7 @@
         </button>
 
         <ul data-dropdown-target="menu"
-            class="hidden bg-white/10 z-50 text-sm absolute right-0 mt-2 w-36 border border-white/20 rounded shadow p-2 text-white backdrop-blur-sm">
+            class="hidden bg-white/10 z-50 text-sm absolute right-0 mt-2 w-36 border border-white/20 rounded shadow p-2 backdrop-blur-sm">
           <li>
             <%= link_to 'マイページ', user_path(current_user),
                         class: 'block px-2 py-1 hover:bg-white/20 rounded' %>
