--- a/app/views/simple_calendar/_month_calendar.html.erb
+++ b/app/views/simple_calendar/_month_calendar.html.erb
@@ -1,7 +1,7 @@
-<div class="gap-px grid grid-cols-1 sm:grid-cols-7 bg-light-ochre rounded-lg shadow-xl ap-px">
+<div class="gap-px grid grid-cols-1 sm:grid-cols-7 bg-light-ochre rounded-lg shadow-xl">
   <% date_range.first(7).each_with_index do |day, i| %>
     <div class="<%= class_names(
-                      'hidden sm:block py-3 text-center font-bold bg-ochre shadow-lg',
+                      'hidden sm:block py-3 text-center font-bold bg-ochre shadow-lg text-white',
                       { 'rounded-tl-lg' => i.zero?, 'rounded-tr-lg' => i == 6 }
                     ) %>">
       <%= day.strftime('%a') %>
@@ -10,14 +10,14 @@
 
   <% start_weekday(start_date.year).times do %>
     <div
-      class="hidden sm:block aspect-[3/4] border-b border-r border-ochre p-2"
+      class="calendar-border p-2 hidden sm:block aspect-[3/4]"
       data-test="offset_cell">
     </div>
   <% end %>
 
   <% advent_dates(start_date.year).each do |date| %>
     <div data-test="day-<%= date.day %>"
-         class="border-b border-r border-ochre p-2 aspect-[4/1] sm:aspect-[3/4]">
+         class="calendar-border p-2 aspect-[4/1] sm:aspect-[3/4]">
       <% instance_exec(date, calendar.sorted_events_for(date), &passed_block) %>
     </div>
   <% end %>
