--- a/app/views/entries/_link_preview.html.erb
+++ b/app/views/entries/_link_preview.html.erb
@@ -13,7 +13,7 @@
     </div>
 
     <% if entry.meta_image_url %>
-      <%= image_tag entry.meta_image_url, class: 'w-28 h-15 sm:w-40 sm:h-21 object-cover rounded-md', alt: 'アイキャッチ画像' %>
+      <%= image_tag entry.meta_image_url, class: 'w-28 aspect-[4/3] sm:w-40 sm:h-21 object-cover rounded-md', alt: 'アイキャッチ画像' %>
     <% end %>
   <% end %>
 </div>
