デザイン調整

--- a/app/views/entries/_link_preview.html.erb
+++ b/app/views/entries/_link_preview.html.erb
@@ -14,7 +14,7 @@
 
     <% if entry.meta_image_url %>
       <%= image_tag entry.meta_image_url,
-                    class: 'w-28 aspect-[4/3] sm:w-40 sm:h-21 object-cover rounded-md',
+                    class: 'ml-2 w-28 aspect-[4/3] sm:w-40 sm:h-21 object-cover rounded-md',
                     alt: 'アイキャッチ画像' %>
     <% end %>
   <% end %>
