--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -10,6 +10,7 @@
         <button data-action="click->dropdown#toggle">
           <%= image_tag current_user.avatar_url,
                         class: 'h-10 w-10 rounded-full object-cover hover-border-white',
+                        onerror: "this.src='#{asset_path('default_avatar.png')}'; this.removeAttribute('onerror');",
                         alt: 'プロフィール画像' %>
         </button>
 
